--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,183 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Epilogue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  background-color: hsl(0, 0%, 98%);
+  overflow: hidden;
+  width: 100%;
+  min-height: 100vh;
+  font-size: 18px;
+  font-weight: 500;
+  color: hsl(0, 0%, 41%);
+}
+
+.black {
+  color: hsl(0, 0%, 8%);
+}
+
+.App header {
+  display: flex;
+  margin: auto;
+  height: 75px;
+  max-width: 1425px;
+  padding: 0 10px;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  height: 35px;
+}
+
+.menu-icon {
+  position: fixed;
+  top: 25px;
+  right: 30px;
+  display: none;
+}
+
+.menu-icon:hover {
+  cursor: pointer;
+}
+
+main {
+  margin-top: 20px;
+}
+
+.main-container {
+  max-width: 1100px;
+  padding-bottom: 50px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.hero-image-container img {
+  padding: 0 20px;
+}
+
+.hero-image-container .desktop {
+  width: 400px;
+}
+
+.hero-image-container .mobile {
+  display: none;
+  margin: 0 auto;
+  width: 300px;
+}
+
+.details-container {
+  padding-left: 20px;
+  width: 405px;
+  line-height: 4rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.details-container h1 {
+  color: hsl(0, 0%, 8%);
+  font-weight: 700;
+  font-size: 68px;
+  margin-top: 85px;
+  margin-bottom: 27px;
+}
+
+.details-container p {
+  font-size: 17px;
+  line-height: 1.5rem;
+  margin-bottom: 40px;
+}
+
+.details-container button {
+  width: fit-content;
+  padding: 10px 20px;
+  font-weight: 700;
+  background-color: hsl(0, 0%, 8%);
+  color: hsl(0, 0%, 98%);
+}
+
+.details-container button:active {
+  background-color: hsl(0, 0%, 98%);
+  color: hsl(0, 0%, 8%);
+}
+
+.client-logo-container {
+  display: flex;
+  margin-top: auto;
+  align-items: center;
+}
+
+.client-logo-container img {
+  margin-right: 20px;
+  transform: scale(0.87);
+}
+
+/* Mobile view */
+@media (max-width: 898px) {
+  .menu-icon {
+    display: block;
+  }
+
+  .main-container {
+    flex-direction: column-reverse;
+  }
+
+  .hero-image-container .mobile {
+    display: block;
+  }
+
+  .hero-image-container .desktop {
+    display: none;
+  }
+
+  .details-container {
+    width: fit-content;
+    padding: 0;
+  }
+
+  .details-container h1 {
+    font-size: 38px;
+    text-align: center;
+    margin-bottom: 4px;
+    margin-top: 40px;
+    padding: 0 20px;
+  }
+
+  .details-container p {
+    text-align: center;
+    font-size: 15px;
+    margin-bottom: 25px;
+    padding: 0 20px;
+  }
+
+  .client-logo-container {
+    margin: 0 auto;
+  }
+
+  .client-logo-container div {
+    margin-right: 0px;
+    transform: scale(0.6);
+  }
+
+  .client-logo-container img {
+    margin-right: 0;
+  }
+
+  .details-container button {
+    margin: 0 auto 40px;
+
+  }
 }
